# Hex_Strategist

./: .gitignore  AGENTS.md  CLAUDE.md  Development_Log.md  Git_Quick_Guide.md  Project_Hex_Strategist_Whitepaper.md  README.md  pyproject.toml  requirements.txt
.roo/: mcp.json
docs/: Development_Log.md  MVP_Development_Plan.md  dev_log.md
src/: capture.py  config.py  ocr.py
tests/: ex_ocr.py  test_capture.py  test_dependencies.py  test_hotkey.py  test_ocr.py  test_phase1_integration.py  test_roi.py
