[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hex-strategist"
version = "0.0.0"
description = "Hex_Strategist project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mss>=10.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
